k8s/03-kong-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: keycloak
  annotations:
    konghq.com/strip-path: "false"
    konghq.com/protocols: "http,https"
spec:
  ingressClassName: kong
  rules:
  - host: keycloak.192.168.100.240.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak
            port:
              number: 8080
